@@ -112,7 +112,13 @@ switch ($action) {
 					}
 
 					if (isset($row['dstport'])) // device
-						$LMS->NetDevLink($dev2['id'], $row['id'], $row['type'], $row['technology'], $row['speed'], $sport, $row['dstport']);
+						$LMS->NetDevLink($dev2['id'], $row['id'], array(
+							'type' => $row['type'],
+							'technology' => $row['technology'],
+							'speed' => $row['speed'],
+							'srcport' => $sport,
+							'dstport' => $row['dstport'],
+						));
 					else // node
 						$LMS->NetDevLinkNode($row['id'], $dev2['id'], array(
 							'type' => $row['type'],
@@ -138,7 +144,13 @@ switch ($action) {
 					}
 
 					if (isset($row['dstport'])) // device
-						$LMS->NetDevLink($dev1['id'], $row['id'], $row['type'], $row['technology'], $row['speed'], $sport, $row['dstport']);
+						$LMS->NetDevLink($dev1['id'], $row['id'], array(
+							'type' => $row['type'],
+							'technology' => $row['technology'],
+							'speed' => $row['speed'],
+							'srcport' => $sport,
+							'dstport' => $row['dstport']
+						));
 					else // node
 						$LMS->NetDevLinkNode($row['id'], $dev1['id'], array(
 							'type' => $row['type'],
@@ -210,6 +222,8 @@ switch ($action) {
 	case 'connect':
 
 		$linktype = !empty($_GET['linktype']) ? intval($_GET['linktype']) : '0';
+		$srcradiosector = ($linktype == 1 ? intval($_GET['srcradiosector']) : null);
+		$dstradiosector = ($linktype == 1 ? intval($_GET['dstradiosector']) : null);
 		$linktechnology = !empty($_GET['linktechnology']) ? intval($_GET['linktechnology']) : '0';
 		$linkspeed = !empty($_GET['linkspeed']) ? intval($_GET['linkspeed']) : '100000';
 		$dev['srcport'] = !empty($_GET['srcport']) ? intval($_GET['srcport']) : '0';
@@ -247,11 +261,21 @@ switch ($action) {
 		}
 
 		$SESSION->save('devlinktype', $linktype);
+		$SESSION->save('devlinksrcradiosector', $srcradiosector);
+		$SESSION->save('devlinkdstradiosector', $dstradiosector);
 		$SESSION->save('devlinktechnology', $linktechnology);
 		$SESSION->save('devlinkspeed', $linkspeed);
 
 		if (!$error) {
-			$LMS->NetDevLink($dev['id'], $_GET['id'], $linktype, $linktechnology, $linkspeed, $dev['srcport'], $dev['dstport']);
+			$LMS->NetDevLink($dev['id'], $_GET['id'], array(
+				'type' => $linktype,
+				'srcradiosector' => $srcradiosector,
+				'dstradiosector' => $dstradiosector,
+				'technology' => $linktechnology,
+				'speed' => $linkspeed,
+				'srcport' => $dev['srcport'],
+				'dstport' => $dev['dstport'],
+			));
 			$SESSION->redirect('?m=netdevinfo&id=' . $_GET['id']);
 		}
 
@@ -284,6 +308,7 @@ switch ($action) {
 		}
 
 		$SESSION->save('nodelinktype', $linktype);
+		$SESSION->save('nodelinkradiosector', $linkradiosector);
 		$SESSION->save('nodelinktechnology', $linktechnology);
 		$SESSION->save('nodelinkspeed', $linkspeed);
 
@@ -722,9 +747,12 @@ $SMARTY->assign('restnetdevlist', $netdevlist);
 $SMARTY->assign('replacelist', $replacelist);
 $SMARTY->assign('replacelisttotal', $replacelisttotal);
 $SMARTY->assign('devlinktype', $SESSION->get('devlinktype'));
+$SMARTY->assign('devlinksrcradiosector', $SESSION->get('devlinksrcradiosector'));
+$SMARTY->assign('devlinkdstradiosector', $SESSION->get('devlinkdstradiosector'));
 $SMARTY->assign('devlinktechnology', $SESSION->get('devlinktechnology'));
 $SMARTY->assign('devlinkspeed', $SESSION->get('devlinkspeed'));
 $SMARTY->assign('nodelinktype', $SESSION->get('nodelinktype'));
+$SMARTY->assign('nodelinkradiosector', $SESSION->get('nodelinkradiosector'));
 $SMARTY->assign('nodelinktechnology', $SESSION->get('nodelinktechnology'));
 $SMARTY->assign('nodelinkspeed', $SESSION->get('nodelinkspeed'));
 $SMARTY->assign('nastype', $LMS->GetNAStypes());
